# phase2

./: .gitignore  .prettierignore  PLAN.md  TASKS.md  package-lock.json  package.json
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
apps/api/: .env.example  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_create_users_sessions.py  002_create_todos.py
apps/api/app/: __init__.py  main.py
apps/api/app/core/: __init__.py  config.py  database.py  security.py
apps/api/app/middleware/: __init__.py  auth.py  ratelimit.py
apps/api/app/models/: __init__.py  session.py  todo.py  user.py
apps/api/app/routes/v1/: __init__.py  auth.py  todos.py
apps/api/app/schemas/: __init__.py  auth.py  todo.py
apps/api/scripts/: test_connection.py
apps/api/sql/: rls_setup.sql
apps/api/tests/: conftest.py  test_auth.py  test_ratelimit.py  test_todo.py
apps/web/: .eslintrc.json  next.config.ts  package.json  tailwind.config.ts
apps/web/src/app/: globals.css  layout.tsx  (+1 more)
history/prompts/auth/: 001-auth-spec-creation.spec.prompt.md  002-task-003-user-session-models.spec.prompt.md  003-task-004-jwt-auth-configuration.spec.prompt.md  004-task-005-auth-api-endpoints.spec.prompt.md  005-task-006-007-frontend-auth-client.spec.prompt.md  006-task-008-auth-context-provider.spec.prompt.md  007-task-009-login-form-component.spec.prompt.md  008-task-010-011-register-form-protected-routes.spec.prompt.md  009-task-012-auth-backend-tests.spec.prompt.md  010-task-013-rate-limiting-middleware.spec.prompt.md
specs/features/: auth.md  todo.md
(+39 files in other folders)
